hphp/hack/test/typecheck/expression_trees_not_virtualize_functions/instance_method_call.php.exp
File "instance_method_call.php", line 13, characters 5-20:
Expression trees do not support calling instance methods (Parsing[1002])
File "instance_method_call.php", line 13, characters 5-8:
Variable `$foo` is undefined, or not always defined. (Naming[2050])
File "instance_method_call.php", line 13, characters 15-19:
Invalid argument (Typing[4110])
  File "instance_method_call.php", line 6, characters 23-35:
  Expected `ExampleString`
  File "instance_method_call.php", line 13, characters 15-19:
  But got `string`
